[tool.poetry]
name = "quickbase-client"
version = "0.1.0"
description = "A QuickBase Python API Client Generator"
authors = ["Tim Kutcher <tim@tkutcher.com>"]
maintainers = ["Tim Kutcher <tim@tkutcher.com>"]
readme = "README.rst"
keywords = ["quickbase", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tkutcher/quickbase-client/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.24.0"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"
flake8 = "^3.8.4"
flake8-quotes = "^3.2.0"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
qbc = 'quickbase_client.tools.qbc:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
